# eeric-core

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/memcpy/: main.rs
scripts/: generate_executors.py
src/: lib.rs  prelude.rs  rv_core.rs
src/extensions/: iter_collect_with_eew_ext.rs  iter_collectors_ext.rs  iter_mask_ext.rs  mod.rs  num_mask_ext.rs  num_set_lsb_ext.rs
src/extensions/iter_collectors_ext/: collect_fp_with_eew_ext.rs  collect_with_eew_ext.rs  collect_with_wide_eew_ext.rs
src/rv_core/: arbitrary_float.rs  instruction.rs  memory.rs  registers.rs  snapshot.rs  vector_engine.rs
src/rv_core/instruction/: executor.rs  format.rs
src/rv_core/instruction/executor/: prelude.rs  vector_context.rs
src/rv_core/instruction/executor/base/: add.rs  addi.rs  addiw.rs  addw.rs  and.rs  andi.rs  auipc.rs  beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs  jal.rs  jalr.rs  lb.rs  lbu.rs  ld.rs  lh.rs  lhu.rs  lui.rs  lw.rs  lwu.rs  mod.rs  or.rs  ori.rs  sb.rs  sd.rs  sh.rs  sll.rs  slli.rs  slliw.rs  sllw.rs  slt.rs  slti.rs  sltiu.rs  sltu.rs  sra.rs  srai.rs  sraiw.rs  (+10 more)
src/rv_core/instruction/executor/d/: fadd.rs  fclass.rs  fcvt.rs  fdiv.rs  feq.rs  fld.rs  fle.rs  flt.rs  fmadd.rs  fmax.rs  fmin.rs  (+12 more)
src/rv_core/instruction/format/: base.rs  csr.rs  float.rs  vector.rs
src/rv_core/registers/: aliases.rs  csr.rs  float.rs  integer.rs  vector.rs
src/rv_core/registers/vector/: acquired_registers.rs  arbitrary_float.rs  fp.rs  vector_engine.rs  vreg.rs  wide_vreg.rs
src/rv_core/vector_engine/: lmul.rs  mask_behaviour.rs  sew.rs  vlen.rs
(+226 files in other folders)
