[package]
name = "eeric"
version = "0.0.3"
edition = "2021"
description = "An easily embeddable RV64I core with MFDV extensions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
itertools = "0.11.0"
num-traits = "0.2.16"
