[package]
name = "eeric"
version = "0.0.28"
edition = "2021"
description = "An easily embeddable RV64I core with MFDV extensions"
license = "MIT"
repository = "https://github.com/PawelPerek/eeric"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
derive_builder = "0.12.0"
itertools = "0.11.0"
num-traits = "0.2.16"
